# loader-v4

./: Cargo.toml  README.md  pnpm-lock.yaml
program/: Cargo.toml  README.md  idl.json
program/fuzz/: instr-24CyCVhTZg8FQutJefw1MAs5RvLiKsA8xC2JLR9ctRFp.fix  instr-24CyCVhTZg8FQutJefw1MAs5RvLiKsA8xC2JLR9ctRFp.json  instr-24LhawcgMZ9ve5fea5fGnQZXcDtTMR1CWMrEJH9YkpnB.fix  instr-24LhawcgMZ9ve5fea5fGnQZXcDtTMR1CWMrEJH9YkpnB.json  instr-2SwC1SxJaYiKwzA8Yftp2daRiv9PcedcLDHbubbUPKdn.fix  instr-2SwC1SxJaYiKwzA8Yftp2daRiv9PcedcLDHbubbUPKdn.json  instr-2X3i67LyLLd2x9X6LFhH1HnYhSommJ8zUHio3wrPnDKV.fix  instr-2X3i67LyLLd2x9X6LFhH1HnYhSommJ8zUHio3wrPnDKV.json  instr-2crnZkFpAK3j1wT2z7QLUGL81Cat5Bq4Li5FekAVK4yj.fix  instr-2crnZkFpAK3j1wT2z7QLUGL81Cat5Bq4Li5FekAVK4yj.json  instr-2iusBsgAK5yiHdTaRcoksELSbwCPuB3PwfJD7txCQBEW.fix  instr-2iusBsgAK5yiHdTaRcoksELSbwCPuB3PwfJD7txCQBEW.json  instr-2rkXoRaiK3AdtHM8HYQ7vLp3eTDsuaysaejtDDKUv8NV.fix  instr-2rkXoRaiK3AdtHM8HYQ7vLp3eTDsuaysaejtDDKUv8NV.json  instr-2uxW3ka8NXoAEApCwoWpqDjtUmCm31a3Vhsd56RCjsAU.fix  instr-2uxW3ka8NXoAEApCwoWpqDjtUmCm31a3Vhsd56RCjsAU.json  instr-2xbwSrVxZ3SzkZQcweMde9sLD9azTsk5V847SYF8DZqx.fix  instr-2xbwSrVxZ3SzkZQcweMde9sLD9azTsk5V847SYF8DZqx.json  instr-31Sb8isR9DXxTWfo8XP5TosfZNgnG4arcVf9zfUXDDVL.fix  instr-31Sb8isR9DXxTWfo8XP5TosfZNgnG4arcVf9zfUXDDVL.json  instr-36R4NyJX52LDxJqgmhyj55EKJYikc8V3NA4QiYqEuus3.fix  instr-36R4NyJX52LDxJqgmhyj55EKJYikc8V3NA4QiYqEuus3.json  instr-3f2uq8aTAajniJn2oFG4VUTCWZR7H6wAj3h74Z7RPaK7.fix  instr-3f2uq8aTAajniJn2oFG4VUTCWZR7H6wAj3h74Z7RPaK7.json  (+120 more)
program/src/: entrypoint.rs  error.rs  (+4 more)
(+160 files in other folders)
