[package]
name = "solana-loader-v4-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "CoreBPFLoaderV41111111111111111111111111111"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.3"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "1.0.193", features = ["derive"] }
shank = "^0.4.2"
solana-program = "~2.0"
thiserror = "^1.0"

[dev-dependencies]
memoffset = "0.9"
mollusk-svm = { version = "0.0.10-solana-2.0", features = ["fuzz-fd"] }
solana-sdk = "~2.0"

[features]
bpf-entrypoint = []
test-sbf = []
